--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "chalk": "^2.3.0",
     "github-username": "^4.1.0",
+    "lodash": "^4.17.21",
     "shelljs": "^0.7.8",
     "yeoman-generator": "^5.3.0",
     "yosay": "^2.0.1"
